# depcheck-rs

./: .gitignore  Cargo.toml  README.md  copy-bindings.js  copy-test-bindings.js  copy.js  index.js  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: CI.yml  NodeCI.yml  post-release.yml  publish-node.yml  publish-rust.yml
__tests__/__snapshots__/: depcheck.test.ts.snap
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: checker.rs  checker_result.rs  config.rs  dependency.rs  lib.rs  package.rs  parser.rs
crates/core/src/util/: extract_type_name.rs  is_bin_dependency.rs  is_core_module.rs  is_module.rs  load_module.rs  mod.rs
crates/core/tests/: mod.rs
crates/core/tests/fake_modules/bin_js/: package.json
crates/core/tests/fake_modules/cjs/: index.cjs
crates/core/tests/fake_modules/good/: index.js
crates/core/tests/fake_modules/mjs/: index.mjs
crates/core/tests/fake_modules/package/: package.json
crates/core/tests/fake_modules/package/src/: rootFile.ts
crates/core/tests/fake_modules/package/src/subDir/subSubDir/: subSubDirFile.ts
crates/depcheck_core/: Cargo.toml
crates/depcheck_core/src/: check.rs  checker.rs  dependency.rs  lib.rs  options.rs  package.rs  parser.rs  parsers.rs  utils.rs
crates/depcheck_core/src/util/: extract_package_name.rs  extract_type_name.rs  is_core_module.rs  load_module.rs  mod.rs
crates/depcheck_core/tests/: mod.rs
crates/depcheck_core/tests/fake_modules/package/: package.json
crates/depcheck_core/tests/fake_modules/package/src/: rootFile.ts
crates/depcheck_core/tests/fake_modules/package/src/subDir/: subDirFile.ts
crates/depcheck_core/tests/package/src/: rootFile.ts
crates/depcheck_core/tests/package/src/subDir/: subDirFile.ts
crates/depckeck_cli/: Cargo.toml
crates/depckeck_cli/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
node-depcheck/: .gitignore  .npmignore
node-depcheck/src/: binding.d.ts  binding.js  index.js
node-depcheck/src/__tests__/: sum.test.js
node/src/: binding.d.ts  binding.js  index.ts
node/src/__tests__/: depcheck.test.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/npm/android-arm-eabi/: README.md  package.json
scripts/npm/android-arm64/: package.json
scripts/npm/darwin-x64/: package.json
scripts/npm/linux-arm-gnueabihf/: README.md
scripts/npm/linux-arm64-gnu/: package.json
scripts/npm/linux-arm64-musl/: README.md
scripts/npm/linux-x64-gnu/: README.md  package.json
scripts/npm/linux-x64-musl/: README.md  package.json
scripts/npm/win32-x64-msvc/: README.md
src/: lib.rs
tests/package/: package.json
