[package]
name = "depcheck-rs-cli"
version = "0.1.0"
authors = ["awesome author"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
depckeck-rs-core = { version = "0.0.0", path = "../core" }

serde_json = "1.0.78"
clap = {version = "3.1.6", features = ["cargo", "derive"]}
thiserror = "1.0"
human-panic = "1.0.3"
