[package]
name = "depcheck-rs-cli"
description = "Cli for depcheck rs"
version = "0.0.0"
authors = ["Depcheck rs developers"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Dominionys/depcheck-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
depckeck-rs-core = { version = "0.0.0", path = "../core" }

serde_json = "1.0.78"
clap = {version = "3.1.6", features = ["cargo", "derive"]}
human-panic = "1.0.3"
env_logger = "0.9.0"
clap-verbosity-flag = "1.0"
proc-exit = "1.0.3"
eyre = "0.6.7"
