[package]
name = "depcheck-rs-cli"
version = "0.0.26"
authors = ["Depcheck rs developers"]
categories = ["command-line-utilities"]
description = "Commandline for Depcheck rs"
keywords = [
    "search",
    "unused",
    "depcheck",
    "dependency",
    "dependencies"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/Dominionys/depcheck-rs.git"
repository = "https://github.com/Dominionys/depcheck-rs.git"

[[bin]]
name = "depcheck-rs"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
depckeck-rs-core = { version = "0.0.26", path = "../core" }

serde_json = "1.0.80"
clap = {version = "3.1.14", features = ["cargo", "derive"]}
human-panic = "1.0.3"
env_logger = "0.9.0"
clap-verbosity-flag = "1.0"
proc-exit = "1.0.3"
eyre = "0.6.8"
