[package]
name = "depckeck-rs-core"
version = "0.0.28"
authors = ["Depcheck rs developers"]
categories = ["command-line-utilities"]
description = "Depcheck rs core"
keywords = [
    "search",
    "unused",
    "depcheck",
    "dependency",
    "dependencies"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/Dominionys/depcheck-rs.git"
repository = "https://github.com/Dominionys/depcheck-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"
crossbeam = "0.8.2"
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
swc_ecma_parser = "0.116.0"
swc_common = {version = "0.26.0", features = ["tty-emitter"]}
swc_ecma_ast = "0.89.1"
swc_atoms = "0.4.24"
swc_ecma_dep_graph = "0.88.0"
thiserror = "1.0"
relative-path = "1.7.2"
regex = "1"
globset = "0.4.9"
ignore = "0.4.18"
log = "0.4.17"
eyre = "0.6.8"
env_logger = "0.9.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
