[package]
name = "depckeck_core"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
swc_ecma_parser = "0.91.12"
swc_common = {version = "0.17.9", features = ["tty-emitter"]}
swc_ecma_ast = "0.68.3"
swc_atoms = "0.2.9"
swc_ecma_dep_graph = "0.63.1"
thiserror = "1.0"
relative-path = "1.6.1"
regex = "1"
