[package]
name = "depcheck-rs-node"
edition = "2021"
version = "0.0.0"
authors = ["Depcheck rs developers"]
categories = ["command-line-utilities"]
keywords = [
    "search",
    "npm dependencies",
    "unused",
    "package",
    "packages",
    "depcheck",
    "dependency",
    "dependencies",
    "devDependencies"]
license = "MIT"
homepage = "https://github.com/Dominionys/depcheck-rs.git"
repository = "https://github.com/Dominionys/depcheck-rs.git"

[lib]
crate-type = ["cdylib"]
name = "depcheck_rs_node"

[dependencies]
depckeck-rs-core = { version = "0.0.0", path = "../core" }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.3.0-canary.0", default-features = false, features = ["napi4"] }
napi-derive = "2.3.0-canary.0"

[build-dependencies]
napi-build = "1.2.1"
