[package]
name = "depcheck-node-rs"
edition = "2021"
version = "0.0.1"
authors = ["Depcheck rs developers"]
categories = ["command-line-utilities"]
description = "Depcheck rs node bindings"
keywords = [
    "search",
    "unused",
    "depcheck",
    "dependency",
    "dependencies"]
license = "MIT"
homepage = "https://github.com/Dominionys/depcheck-rs.git"
repository = "https://github.com/Dominionys/depcheck-rs.git"

[lib]
crate-type = ["cdylib"]
name = "depcheck_rs_node"

[dependencies]
depckeck-rs-core = { version = "0.0.1", path = "../core" }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.3.0-canary.0", default-features = false, features = ["napi4"] }
napi-derive = "2.3.0-canary.0"

[build-dependencies]
napi-build = "1.2.1"
