[package]
name = "depcheck-rs-node"
edition = "2021"
version = "0.0.27"
authors = ["Depcheck rs developers"]
categories = ["command-line-utilities"]
description = "Depcheck rs node bindings"
keywords = [
    "search",
    "unused",
    "depcheck",
    "dependency",
    "dependencies"]
license = "MIT"
homepage = "https://github.com/Dominionys/depcheck-rs.git"
repository = "https://github.com/Dominionys/depcheck-rs.git"

[lib]
crate-type = ["cdylib"]
name = "depcheck_rs_npm"

[dependencies]
depckeck-rs-core = { version = "0.0.27", path = "../core" }
env_logger = "0.9.0"
log = "0.4.17"

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.5.0", default-features = false, features = ["napi4"] }
napi-derive = "2.5.0"

[build-dependencies]
napi-build = "2.0.1"
